--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <section id="custom">
         <h2>Custom Furniture</h2>
         <p>Have a unique design in mind? Contact us to bring your ideas to life.</p>
+        <button onclick="ScrollToContact()">Contact Us</button>
     </section>
 
     <!-- Testimonials -->
