--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
             </ul>
         </nav>
     </header>
+    <div id="discountPopup" class="popup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup()">&times;</span>
+            <h2>Exclusive Discount!</h2>
+            <p>Get 20% off on your first purchase. Use code: <strong>WELCOME20</strong></p>
+            <button onclick="scrollToProducts()">Shop Now</button>
+        </div>
+    </div>
+    
 
     <!-- Hero Section -->
     <section id="home">
