--- a/outdoor.html
+++ b/outdoor.html
@@ -4,8 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outdoor</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            text-align: center;
+        }
+        h2 {
+            color: #333;
+        }
+        .catalog {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .product {
+            border: 1px solid #ddd;
+            padding: 15px;
+            width: 220px;
+            text-align: center;
+            border-radius: 5px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .product img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .product h3 {
+            margin: 10px 0 5px;
+        }
+        .product p {
+            font-size: 16px;
+            color: #007bff;
+        }
+        .back-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <h1>Outdoor</h1>
+    <div class="catalog">
+        <div class="product" onclick="">
+            <img src="" alt="Modern Sofa">
+            <h3>Modern Sofa</h3>
+            <p>$499</p>
+        </div>
+        <div class="product">
+            <img src="" alt="Wooden Table">
+            <h3>Wooden Table</h3>
+            <p>$299</p>
+        </div>
+        <div class="product">
+            <img src="" alt="Luxury Chair">
+            <h3>Luxury Chair</h3>
+            <p>$199</p>
+        </div>
+        <div class="product">
+            <img src="" alt="Elegant Lamp">
+            <h3>Elegant Lamp</h3>
+            <p>$79</p>
+        </div>
+    </div>
 </body>
 </html>
