--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="shop">
         <h2>Our Collections</h2>
         <div class="categories">
-            <a href="file://wsl.localhost/Ubuntu/home/palin/repos/Furniture/living.html"><button>Living Room</button></a>
+            <a href="living.html"><button>Living Room</button></a>
             <a href="file://wsl.localhost/Ubuntu/home/palin/repos/Furniture/bedroom.html"><button>Bedroom</button></a>
             <a href="file://wsl.localhost/Ubuntu/home/palin/repos/Furniture/office.html"><button>Office</button></a>
             <a href="file://wsl.localhost/Ubuntu/home/palin/repos/Furniture/outdoor.html"><button>Outdoor</button></a>
