--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <h2>Our Collections</h2>
         <div class="categories">
             <a href="living.html"><button>Living Room</button></a>
-            <a href="file://wsl.localhost/Ubuntu/home/palin/repos/Furniture/bedroom.html"><button>Bedroom</button></a>
-            <a href="file://wsl.localhost/Ubuntu/home/palin/repos/Furniture/office.html"><button>Office</button></a>
-            <a href="file://wsl.localhost/Ubuntu/home/palin/repos/Furniture/outdoor.html"><button>Outdoor</button></a>
+            <a href="bedroom.html"><button>Bedroom</button></a>
+            <a href="office.html"><button>Office</button></a>
+            <a href="outdoor.html"><button>Outdoor</button></a>
         </div>
     </section>
     
