--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><button onclick="openSignIn()">Sign In</button></li>
-                <li><button onclick="openSignUp()">Sign Up</button></li>
+                <li><button  onclick="openSignIn()">Sign In</button></li>
+                <li><button  onclick="openSignUp()">Sign Up</button></li>
 
             </ul>
         </nav>
@@ -114,35 +114,43 @@
         <p>Phone: 6371551027</p>
         <iframe src="https://www.google.com/maps/embed?..." width="600" height="450"></iframe>
     </section>
+    <!--Sign in Modal-->
+<div id="signin-modal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeSignIn()">&times;</span>
+        <h2>Sign In</h2>
+        <input type="email" id="signin-email" placeholder="Email">
+        <input type="password" id="signin-password" placeholder="Password">
+        <button id="signin-button">Sign In</button>
+    </div>
+</div>
+
+<!-- Sign-Up Modal -->
+<div id="signup-modal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeSignUp()">&times;</span>
+        <h2>Sign Up</h2>
+        <input type="text" id="signup-name" placeholder="Full Name">
+        <input type="email" id="signup-email" placeholder="Email">
+        <input type="password" id="signup-password" placeholder="Password">
+        <input type="password" id="signup-confirm-password" placeholder="Confirm Password">
+        <button id="signup-button">Sign Up</button>
+        <p>Already have an account? <a href="#" onclick="openSignIn()">Sign In</a></p>
+    </div>
+</div>
+
+<!-- Logout Button -->
+<button id="logout-button">Log Out</button>
+
     
 
-    <!-- Sign-In Modal -->
-    <div id="signin-modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeSignIn()">&times;</span>
-            <h2>Sign In</h2>
-            <input type="text" placeholder="Email">
-            <input type="password" placeholder="Password">
-            <button>Sign In</button>
-        </div>
-    </div>
 
-    <!-- Sign-Up Modal -->
-    <div id="signup-modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeSignUp()">&times;</span>
-            <h2>Sign Up</h2>
-            <input type="text" placeholder="Full Name">
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
-            <input type="password" placeholder="Confirm Password">
-            <button>Sign Up</button>
-            <p>Already have an account? <a href="#" onclick="openSignIn()">Sign In</a></p>
-        </div>
-    </div>
 
     <footer>
         <p>&copy; 2025 Furniture Store. All rights reserved.</p>
     </footer>
+
+
+    
 </body>
 </html>
