--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furniture Store</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -31,7 +31,7 @@
             <span class="close-btn" onclick="closePopup()">&times;</span>
             <h2>Exclusive Discount!</h2>
             <p>Get 20% off on your first purchase. Use code: <strong>WELCOME20</strong></p>
-            <button onclick="scrollToProducts()">Shop Now</button>
+            <button onclick="scrollToproducts()">Shop Now</button>
         </div>
     </div>
     
