--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navigation -->
     <header>
-        <h1>Panigrahi Furniture</h1>
+        <h1>Comfify Furnitures</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -40,9 +40,9 @@
     <section id="home">
         <section class="home">
             <div class="slideshow-container">
-                <div class="slide" style="background-image: url('images/images/OIP (1).jpeg');"></div>
-                <div class="slide" style="background-image: url('images/images/th (2).jpeg');"></div>
-                <div class="slide" style="background-image: url('images/images/th.jpeg');"></div>
+                <div class="slide" style="background-image: url('images/OIP (1).jpeg');"></div>
+                <div class="slide" style="background-image: url('images/th.jpeg');"></div>
+                <div class="slide" style="background-image: url('images/th.jpeg');"></div>
             </div>
             <div class="overlay">
                 <h1>Stylish & Comfortable Furniture</h1>
@@ -65,7 +65,7 @@
                     <p>We provide high-quality, stylish, and sustainable furniture for your home and office.</p>
                 </div>
                 <div class="about-image">
-                    <img src="images/images/OIP.jpeg" alt="Furniture Display">
+                    <img src="images/OIP.jpeg" alt="Furniture Display">
                 </div>
             </div>
         </section>
@@ -95,15 +95,19 @@
         <h2>What Our Customers Say</h2>
         <div class="testimonial">
             <p>"Amazing quality and excellent service!" - Jane D.</p>
+            <p>"Beautiful furniture, fast delivery!" - Mark S.</p>
+            <p>"Highly recommend! Great customer support." - Lisa T.</p>
+            <p>"Stylish and durable products!" - David R.</p>
         </div>
     </section>
-
+    
     <!-- Blog -->
     <section id="blog">
         <h2>Home Decor Tips</h2>
         <article>
             <h3>How to Choose the Perfect Sofa</h3>
             <p>Find the best sofa that fits your space and lifestyle...</p>
+            <a href="blog.html"><button>Know More</button></a>
         </article>
     </section>
 
