--- a/public/blog.html
+++ b/public/blog.html
@@ -21,7 +21,7 @@
         
         <article style="border-bottom: 1px solid #ddd; padding-bottom: 20px; margin-bottom: 20px;">
             <h2>5 Easy Ways to Brighten Your Living Room</h2>
-            <p>Discover simple tricks to make your living space more inviting...</p>
+            <h3>Discover simple tricks to make your living space more inviting...</h3>
             <ol>
                 <li>Use Light-Colored Walls – White or pastel shades make your space look bigger and brighter.</li>
                 <li>Incorporate Mirrors – Mirrors reflect light and create an illusion of more space.</li>
