--- a/public/bedroom.html
+++ b/public/bedroom.html
@@ -120,22 +120,22 @@
     
     <div class="catalog">
         <div class="product" onclick="openBedModal()">
-            <img src="images/images/living room/R.jpeg" alt="Bed">
+            <img src="images/5b10c430-64a2-4db5-b672-4d6728486fee.webp" alt="Bed">
             <h3>Bed</h3>
             <p>$499</p>
         </div>
         <div class="product" onclick="openWardrobeModal()">
-            <img src="images/images/living room/OIP (6).jpeg" alt="Wardrobe">
+            <img src="images/5bd68689-ca1f-479d-ba13-da63e496b09c.webp" alt="Wardrobe">
             <h3>Wardrobe</h3>
             <p>$299</p>
         </div>
         <div class="product" onclick="openDresserModal()">
-            <img src="images/images/living room/OIP (4).jpeg" alt="Dresser">
+            <img src="images/16321f9e-fd68-4ef8-823e-7b381d5aba99.webp" alt="Dresser">
             <h3>Dresser</h3>
             <p>$199</p>
         </div>
         <div class="product" onclick="openLampModal()">
-            <img src="images/images/OIP (5).jpeg" alt="Elegant Lamp">
+            <img src="images/79dd3f36-7168-4b5b-8b42-b2ad04036967.webp" alt="Elegant Lamp">
             <h3>Elegant Lamp</h3>
             <p>$79</p>
         </div>
@@ -149,40 +149,26 @@
         <h2>More Sofa Options</h2>
         <div class="catalog">
             <div class="product">
-                <img src="sofa1.jpg" alt="Luxury Sofa">
-                <h3>Luxury Sofa</h3>
+                <img src="images/b66b0928-286c-4f04-b3f2-b76c9f662035.webp" alt="King Size Bed">
+                <h3>King Size Bed</h3>
                 <p>$799</p>
             </div>
             <div class="product">
-                <img src="sofa2.jpg" alt="Comfort Sofa">
-                <h3>Comfort Sofa</h3>
+                <img src="images/c300b92b-0283-411f-9ec9-af18da5d7243.webp" alt="Platform Bed">
+                <h3>Platform Bed</h3>
                 <p>$599</p>
             </div>
             <div class="product">
-                <img src="sofa3.jpg" alt="Compact Sofa">
-                <h3>Compact Sofa</h3>
+                <img src="images/45ab2fe1-5c10-4552-a0b9-1c1ba093ffaa.webp" alt="Bunk Bed">
+                <h3>Bunk Bed</h3>
                 <p>$499</p>
             </div>
             <div class="product">
-                <img src="sofa4.jpg" alt="Napper Sofa">
-                <h3>Napper Sofa</h3>
+                <img src="images/e34194f3-47f0-43c1-b427-44ceb013beba.webp" alt="Canopy Bed">
+                <h3>Canopy Bed</h3>
                 <p>$800</p>
             </div>
-            <div class="product">
-                <img src="sofa3.jpg" alt="Fliper Sofa">
-                <h3>Fliper Sofa</h3>
-                <p>$699</p>
-            </div>
-            <div class="product">
-                <img src="sofa3.jpg" alt="Snoozer Sofa">
-                <h3>Snoozer Sofa</h3>
-                <p>$499</p>
-            </div>
-            <div class="product">
-                <img src="sofa3.jpg" alt="Manila Sofa">
-                <h3>Manila Sofa</h3>
-                <p>$999</p>
-            </div>
+            
         </div>
     </div>
 </div>
@@ -193,23 +179,23 @@
         <h2>More Table Options</h2>
         <div class="catalog">
             <div class="product">
-                <img src="images/images/OIP (4).jpeg" alt="Brookyln Table">
-                <h3>Brookyln Table</h3>
+                <img src="images/d29bdf14-88e8-4efb-b051-3c4b473fea9e.webp" alt="Sliding Wardeobe">
+                <h3>Sliding Wardrobe</h3>
                 <p>$799</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (6).jpeg" alt="Chalet Table">
-                <h3>Chalet Table</h3>
+                <img src="images/d4b09c8a-3c26-4e1f-9b8d-fbd697d31082.webp" alt="Heritage Wardrobe">
+                <h3>Heritage Wardrobe</h3>
                 <p>$599</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (7).jpeg" alt="Hartford Table">
-                <h3>Hartford Table</h3>
+                <img src="images/9555fdd0-6ff5-4df4-b31f-1d6cf9b6e877.webp" alt="LuxeMirror Wardrobe">
+                <h3>LuxeMirror Wardrobe</h3>
                 <p>$499</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (8).jpeg" alt="Montanna Table">
-                <h3>Montanna Table</h3>
+                <img src="images/e70fa5cc-95da-428c-b121-1d37180d6dd2 (1).webp" alt="Flexistore Wardrobe">
+                <h3>SmartSpace Dresser</h3>
                 <p>$800</p>
             </div>
         </div>
@@ -222,22 +208,22 @@
         <h2>More Table Options</h2>
         <div class="catalog">
             <div class="product">
-                <img src="images/images/OIP (4).jpeg" alt="Brookyln Table">
-                <h3>Brookyln Table</h3>
+                <img src="images/dresser/db5a29ee-f4f9-4733-a8f7-0eb2060028e3.webp" alt="UrbanCharm Dresser">
+                <h3>UrbanCharm Dresser</h3>
                 <p>$799</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (6).jpeg" alt="Chalet Table">
-                <h3>Chalet Table</h3>
+                <img src="images/dresser/53ff1cb7-c91e-4a36-957b-8a7f8417a795.webp" alt="RegalVintage Dresser">
+                <h3>RegalVintage  Dresser</h3>
                 <p>$599</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (7).jpeg" alt="Hartford Table">
-                <h3>Hartford Table</h3>
+                <img src="images/dresser/30140731-db17-4eac-8457-06efb21e800e.webp" alt="LuxeMirror Dresser">
+                <h3>LuxeMirror Dresser</h3>
                 <p>$499</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (8).jpeg" alt="Montanna Table">
+                <img src="images/dresser/f255478b-a834-4609-b791-1c29a74b00a4.webp" alt="SmartSpace Dresser">
                 <h3>Montanna Table</h3>
                 <p>$800</p>
             </div>
