--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,11 @@
         <h2>Contact Us</h2>
         <p>Email: panigrahipalin@gmail.com</p>
         <p>Phone: 6371551027</p>
-        <iframe src="https://www.google.com/maps/embed?..." width="600" height="450"></iframe>
+        <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?..." 
+                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        
     </section>
     <!--Sign in Modal-->
 <div id="signin-modal" class="modal">
