--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
     <section id="home">
         <section class="home">
             <div class="slideshow-container">
-                <div class="slide" style="background-image: url('images/OIP (1).jpeg');"></div>
-                <div class="slide" style="background-image: url('images/th.jpeg');"></div>
+                <div class="slide" style="background-image: url('images/81277e9e-b214-4e6a-9397-03badf25b9f7.webp');"></div>
+                <div class="slide" style="background-image: url('images/ca24db05-4a89-4b48-992d-07c9ffdc56cd.webp');"></div>
                 <div class="slide" style="background-image: url('images/th.jpeg');"></div>
                 <div class="overlay">
                     <h1>Stylish & Comfortable Furniture</h1>
