--- a/public/bedroom.html
+++ b/public/bedroom.html
@@ -62,6 +62,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    overflow: auto;
 }
 
 /* Modal Content Box */
@@ -237,23 +238,23 @@
         <h2>More Table Options</h2>
         <div class="catalog">
             <div class="product">
-                <img src="images/images/OIP (4).jpeg" alt="Brookyln Table">
-                <h3>Brookyln Table</h3>
+                <img src="images/lamp/902fddbf-fd34-4506-bc1f-43fb8ff54bf5.webp" alt="LumiGlow Lamp">
+                <h3>LumiGlow Lamp</h3>
                 <p>$799</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (6).jpeg" alt="Chalet Table">
-                <h3>Chalet Table</h3>
+                <img src="images/lamp/53357eee-d0bc-4379-89e4-ffd945578cbf.webp" alt="VintageAura Lamp">
+                <h3>VintageAura Lamp</h3>
                 <p>$599</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (7).jpeg" alt="Hartford Table">
-                <h3>Hartford Table</h3>
+                <img src="images/lamp/c2e0f11f-92c9-4c0a-a14e-4039483c0560.webp" alt="CrystalLuxe Lamp">
+                <h3>CrystalLuxe Lamp</h3>
                 <p>$499</p>
             </div>
             <div class="product">
-                <img src="images/images/OIP (8).jpeg" alt="Montanna Table">
-                <h3>Montanna Table</h3>
+                <img src="images/lamp/3a1443d3-f185-4259-88c8-149836f5710e.webp" alt="BedWall Lamp">
+                <h3>BedWall Lamp</h3>
                 <p>$800</p>
             </div>
         </div>
