--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
         <input type="password" id="signup-password" placeholder="Password">
         <input type="password" id="signup-confirm-password" placeholder="Confirm Password">
         <button id="signup-button">Sign Up</button>
-        <p>Already have an account? <a href="#" onclick="openSignIn()">Sign In</a></p>
+        <p>Already have an account? <button onclick="openSignIn()">Sign In</button></p>
     </div>
 </div>
 
