--- a/public/bedroom.html
+++ b/public/bedroom.html
@@ -143,7 +143,7 @@
     </div>
 
     <a href="index.html" class="back-button">← Back to Home</a>
-    <!-- Modal for sofa(Hidden by Default) -->
+<!-- Modal for Bed -->
 <div id="BedModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="closeBedModal()">&times;</span>
@@ -173,14 +173,14 @@
         </div>
     </div>
 </div>
-<!--Table Modal-->
+<!--Wardrobe Modal-->
 <div id="WardrobeModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="closeWardrobeModal()">&times;</span>
         <h2>More Table Options</h2>
         <div class="catalog">
             <div class="product">
-                <img src="images/d29bdf14-88e8-4efb-b051-3c4b473fea9e.webp" alt="Sliding Wardeobe">
+                <img src="images/d29bdf14-88e8-4efb-b051-3c4b473fea9e.webp" alt="Sliding Wardrobe">
                 <h3>Sliding Wardrobe</h3>
                 <p>$799</p>
             </div>
@@ -281,7 +281,7 @@
         }
         
     }
-    //Wardrobe Table Modal
+    //Wardrobe  Modal
     function openWardrobeModal() {
         document.getElementById("WardrobeModal").style.display = "block";
         
