--- a/public/living.html
+++ b/public/living.html
@@ -53,65 +53,65 @@
             background-color: #0056b3;
         }
         /* Modal Styles */
-.modal {
-    display: none; 
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    overflow: auto;
-}
+        .modal {
+            display: none; 
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            overflow: auto;
+        }
 
-/* Modal Content Box */
-.modal-content {
-    background-color: white;
-    margin: 10% auto;
-    padding: 20px;
-    width: 80%;
-    text-align: center;
-    border-radius: 5px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    position: relative;
-}
+        /* Modal Content Box */
+        .modal-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            width: 80%;
+            text-align: center;
+            border-radius: 5px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            position: relative;
+        }
 
-/* Close Button */
-.close {
-    position: absolute;
-    right: 20px;
-    top: 10px;
-    font-size: 25px;
-    cursor: pointer;
-}
+        /* Close Button */
+        .close {
+        position: absolute;
+        right: 20px;
+        top: 10px;
+        font-size: 25px;
+        cursor: pointer;
+        }
 
-/* Product Grid */
-.catalog {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-}
+    /* Product Grid */
+    .catalog {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 20px;
+    }
 
-/* Individual Product Box */
-.product {
-    border: 1px solid #ddd;
-    padding: 15px;
-    width: 220px;
-    text-align: center;
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-}
+    /* Individual Product Box */
+    .product {
+        border: 1px solid #ddd;
+        padding: 15px;
+        width: 220px;
+        text-align: center;
+        border-radius: 5px;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+    }
 
-/* Product Images */
-.product img {
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-}
+    /* Product Images */
+    .product img {
+        width: 100%;
+        height: auto;
+        border-radius: 5px;
+    }
 
     </style>
 </head>
@@ -143,7 +143,7 @@
     </div>
 
     <a href="index.html" class="back-button">← Back to Home</a>
-    <!-- Modal for sofa(Hidden by Default) -->
+<!-- Modal for sofa-->
 <div id="sofaModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="closeSofaModal()">&times;</span>
@@ -302,7 +302,7 @@
         }
         
     }
-    //chair modal
+    //chair Modal
     function openChairModal() {
         document.getElementById("ChairModal").style.display = "block";
         
